Brief: login, run Autologin doesn't forget info if timeout occurs You can now delete a run Fixed watch, search and enroll screens Registration doesn't suck now (fixed send button position) Added search run feature

--- a/software/client/app/src/main/res/layout/activity_individual_search_runs.xml
+++ b/software/client/app/src/main/res/layout/activity_individual_search_runs.xml
@@ -9,6 +9,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -22,18 +23,22 @@
         android:layout_height="0dp"
         android:layout_marginStart="39dp"
         android:layout_marginLeft="39dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/textView5">
 
         <LinearLayout
             android:id="@+id/container_search_runs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+        </LinearLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
