--- a/software/client/app/src/main/res/layout/activity_individual_created_runs.xml
+++ b/software/client/app/src/main/res/layout/activity_individual_created_runs.xml
@@ -36,7 +36,9 @@
             android:id="@+id/container_created_runs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
