--- a/software/client/app/src/main/res/layout/activity_individual_watched_runs.xml
+++ b/software/client/app/src/main/res/layout/activity_individual_watched_runs.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="Your Runs"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
         app:layout_constraintStart_toStartOf="@+id/scrollView4"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,18 +24,21 @@
         android:layout_height="0dp"
         android:layout_marginStart="39dp"
         android:layout_marginLeft="39dp"
-        android:layout_marginTop="70dp"
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <LinearLayout
             android:id="@+id/container_watched_runs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+        </LinearLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
