--- a/software/client/app/src/main/res/layout/fragment_individual_request.xml
+++ b/software/client/app/src/main/res/layout/fragment_individual_request.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_ssn"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:maxLength="@integer/ssn_length" />
     </android.support.design.widget.TextInputLayout>
 
