--- a/software/client/app/src/main/res/layout/activity_date.xml
+++ b/software/client/app/src/main/res/layout/activity_date.xml
@@ -8,10 +8,13 @@
 
     <DatePicker
         android:id="@+id/date_picker"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,8 +22,8 @@
         android:id="@+id/button_date_picker_accept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="31dp"
-        android:layout_marginRight="31dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
         android:text="@string/button_accept"
         app:layout_constraintEnd_toEndOf="@+id/date_picker"
         app:layout_constraintTop_toBottomOf="@+id/date_picker" />
@@ -29,8 +32,8 @@
         android:id="@+id/button_date_picker_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginLeft="27dp"
         android:text="@string/button_back"
         app:layout_constraintStart_toStartOf="@+id/date_picker"
         app:layout_constraintTop_toBottomOf="@+id/date_picker" />
