Brief: .. modified view data and adjusted icons and yadayadayada changed app icon

--- a/software/client/app/src/main/res/layout/activity_third_party_view_data.xml
+++ b/software/client/app/src/main/res/layout/activity_third_party_view_data.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="Subscribed Requests"
+        android:text="Sent Requests"
         app:layout_constraintStart_toStartOf="@+id/scrollView4"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,17 +26,17 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/container_subscribed_requests"
+            android:id="@+id/container_third_party_sent_requests"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-        </LinearLayout>
+            android:orientation="vertical"></LinearLayout>
 
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
