--- a/software/client/app/src/main/res/layout/fragment_third_party_account.xml
+++ b/software/client/app/src/main/res/layout/fragment_third_party_account.xml
@@ -24,7 +24,7 @@
         android:id="@+id/text_third_party_account_vat"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="111dp"
+        android:layout_marginBottom="63dp"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/button_third_party_account_change_credentials"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,12 +48,25 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginLeft="9dp"
         android:text="@string/button_change_credentials"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_third_party_account_change_account_data"
+        app:layout_constraintStart_toStartOf="@+id/button_third_party_account_change_account_data"
+        app:layout_constraintTop_toBottomOf="@+id/text_third_party_account_vat" />
+
+    <Button
+        android:id="@+id/button_third_party_account_change_account_data"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="77dp"
+        android:text="@string/button_change_account_data"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_third_party_account_vat" />
+        app:layout_constraintTop_toBottomOf="@+id/button_third_party_account_change_credentials" />
 
 </android.support.constraint.ConstraintLayout>
