--- a/software/client/app/src/main/res/layout/activity_individual_change_account_data.xml
+++ b/software/client/app/src/main/res/layout/activity_individual_change_account_data.xml
@@ -11,14 +11,17 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="322dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginLeft="31dp"
         android:layout_marginTop="34dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginRight="31dp"
         android:layout_marginBottom="34dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
