--- a/software/client/app/src/main/res/layout/activity_third_party_change_account_data.xml
+++ b/software/client/app/src/main/res/layout/activity_third_party_change_account_data.xml
@@ -10,14 +10,17 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="322dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
         android:layout_marginTop="34dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
         android:layout_marginBottom="34dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -30,20 +33,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/text_organization_data"
                 android:textSize="24sp" />
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/text_registration_third_party_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_email"
-                    android:inputType="textEmailAddress"
-                    android:maxLength="@integer/default_length"
-                    android:minEms="2" />
-            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
