Brief: added info on external device

--- a/software/client/app/src/main/res/layout/fragment_individual_insert_data.xml
+++ b/software/client/app/src/main/res/layout/fragment_individual_insert_data.xml
@@ -8,28 +8,26 @@
     tools:context=".fragment.individual.IndividualInsertDataFragment"
     tools:layout_editor_absoluteY="81dp">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <TextView
+        android:id="@+id/text_individual_connect_external_device"
+        android:layout_width="169dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginBottom="128dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/button_individual_connect_external_device"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_individual_connect_external_device"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
+        android:layout_marginBottom="179dp"
+        android:text="Reconnect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView3">
-
-        <Button
-            android:id="@+id/button_individual_send_data"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="41dp"
-            android:text="Send"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView3"/>
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/text_individual_connect_external_device" />
 </android.support.constraint.ConstraintLayout>
